# arpa2cm

./: .gitignore  ARPA2CMConfig.cmake.in  CMakeLists.example.txt  CMakeLists.txt  LICENSE  Makefile  README.md
LICENSES/: BSD-2-Clause.degroot  BSD-2-Clause.iww.degroot  BSD-2-Clause.vanrein  BSD-3-Clause.merry  BSD-3-Clause.neundorf  BSD-3-Clause.neundorf.merry.degroot  BSD-3-Clause.toscano  MIT.lua
find-modules/: ECMFindModuleHelpers.cmake  FindLog4cpp.cmake  FindOpenLDAP.cmake  FindSQLite3.cmake  check_log4cpp.cpp
modules/: Config.cmake.in  MacroAddUninstallTarget.cmake  MacroCreateConfigFiles.cmake  MacroEnsureOutOfSourceBuild.cmake  MacroGitVersionInfo.cmake  PackAllPossible.cmake
toolchain/: MacroAddUninstallTarget.cmake  MacroCreateConfigFiles.cmake  README.md
